# assignment_rectangles

./: CMakeLists.txt  README.md
data_expected/: input01_OUT.txt  input02_OUT.txt  input03_OUT.txt  input04_OUT.txt  input05_OUT.txt  input06_OUT.txt  input08_OUT.txt
data_in/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt
scripts/: run_all.sh
src/: main.cpp
